syntax = "proto3";

package protocol;

service Gate2Room {
  rpc Gate2RoomMessage(Gate2RoomReq) returns (Gate2RoomAck); // 客户端-房间消息
}

message Gate2RoomReq {
  int64 user_id = 1;
  bytes message = 2;
}

message Gate2RoomAck {
  bool can = 1; //是否成功
}

service Room2Gate {
  rpc Room2GateMessage(Room2GateReq) returns (Room2GateAck); //房间-客户端消息
}

message Room2GateReq {
  repeated int64 user_id = 1; //需要转发的用户id
  bytes message = 2;          //消息
}

message Room2GateAck {
  repeated int64 user_id = 1; //转发成功的用户id
}